# knowbase

./: Cargo.toml  Dockerfile  README.md
knowbase/: Chart.yaml  values.yaml
knowbase/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
knowbase/templates/tests/: test-connection.yaml
src/: main.rs  state.rs
templates/: base.html  index.html  search.html  upload.html  wiki.html
